learn (use strict, bind(), call()) methodes

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 
     <button class="button" type="button" onclick="myFunc()">Try It</button>
 
+    <button name="buttonkill" class="buttonkill" type="button" onclick="this.style.display = 'none'">Click me</button>
+
+    <button class="btn" id="btn" type="button">Click Me! Btn</button>
+
     <script src="script.js"></script>
 </body>
 </html>
